2016-05-01	"... the impacts of this option are callees may waste some
		stack space, misbehave or jump to a random location."

		include/biting-pear/lolwut.h :
		- tweaked impl::lolwut_impl<...>::set(, 2) to split the two
		  instructions for reading the GOT into two __asm commands

		include/biting-pear/rofl.h :
		- rofl_impl_syscall<...>::re_arg(.) now also casts `enum'
		  arguments appropriately

		lolwutconf/ :
		- bumped from commit 69104ce926 to 9272622875

		test/travis-install-deps.sh :
		- now recognizes a few more specific CPU types for x86-32

2016-04-30	g++ 5 compatibility.

		include/biting-pear/lolwut.h :
		- fixed scrambling of library function addresses under g++ 5
		  for x86-32
		- now does a `#pragma message' when compiling under buggy
		  g++ for ARM

		include/biting-pear/rofl.h :
		- can now scramble syscalls on x86-32 and x86-64, and
		  partially scramble syscalls on other platforms
		- added rofl<...>::mprotect(...)

		share/biting-pear/doge-1.ccc ,
		share/biting-pear/doge-8.ccc :
		- now uses rofl<...>::mprotect(...)

		share/biting-pear/omnomnom.lxx :
		- fixed handling of ?<...> to prevent generated numbers from
		  being output before a preprocessor directive on the same
		  line

		GNUmakefile :
		- rule for include/biting-pear/derp.h (and .../host/derp.h)
		  now pulls ::uintptr_t or std::uintptr_t into biting_pear::
		  impl namespace

		configure :
		- added probe of ::uintptr_t and std::uintptr_t for target
		- removed host endianness check

		.travis.yml :
		- added environment settings for using g++ 5

		test/travis-install-deps.sh :
		- now tries to install g++ 5 if .travis.yml says to
		- added `flex' as a prerequisite package

2016-04-19	"And he was clad in cote and hood of grene."  (2)

		include/biting-pear/lolwut.h :
		- position-independent munging of function pointers now
		  works properly on x86-32

		include/biting-pear/omg.h :
		- fixed operator precedence bug